components/main-components/organ/PostEditor/PostEditor.module.css
.postEditor {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 1rem;
}

.editorContent {
  width: 95vw;
  min-width: 100%;
  min-height: 300px;
  border: 1px solid var(--input-border);
  border-radius: 4px;
  padding: 1rem;
  box-sizing: border-box;
}

.toolbar {
  border-bottom: 1px solid #ccc;
  padding-bottom: 0.5rem;
  margin-bottom: 1rem;
  width: 100%;
  display: flex;
  justify-content: flex-start;
  gap: 1rem;
}

.boldButton, .italicButton, .codeButton {
  background: none;
  border: none;
  cursor: pointer;
  color: var(--text-color);
  font-size: 1.2rem;
}

.boldButton:hover, .italicButton:hover, .codeButton:hover {
  color: var(--button-bg-primary);
}

.active {
  background-color: var(--button-bg-primary);
  color: white;
}

.bubbleMenu {
  background: var(--background-light);
  border: 1px solid var(--input-border);
  border-radius: 4px;
  padding: 1rem;
  box-shadow: var(--shadow-sm);
  display: flex;
  gap: 0.5rem;
}

.bubbleMenu button {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 4px;
  transition: background-color 0.2s ease;
}

.imageButton {
  background: none;
  border: none;
  cursor: pointer;
  color: var(--text-color);
  font-size: 1.2rem;
}

.active {
  border: 1px solid var(--button-bg-primary);
  color: white;
  background-color: var(--button-bg-primary);
}

.titleInput, .subtitleInput {
  width: 100%;
  font-size: 1.5rem;
  font-weight: bold;
  border: none;
  border-bottom: 2px solid var(--input-border);
  margin-bottom: 1rem;
  padding: 0.5rem;
  box-sizing: border-box;
  /* margin-top: 1rem; */
  margin-bottom: 1rem;
}

.titleInput:focus, .subtitleInput:focus {
  outline: none;
  border-bottom: 2px solid var(--button-bg-primary);
}

.titleInput::placeholder, .subtitleInput::placeholder {
  color: var(--input-border);
}

